mudando cores das letras

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -9,8 +9,8 @@
 
 <body style="background-color:blueviolet">
     <h1 style="color: tomato;">A</h1>
-    <h2>B</h2>
-    <h3>C</h3>
+    <h2 style="color: darkblue;">B</h2>
+    <h3 style="color: yellow;">C</h3>
     <background color='blue' />
 </body>
 
