--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -11,6 +11,10 @@
     <h1 style="color: tomato;">A</h1>
     <h2 style="color: darkblue;">B</h2>
     <h3 style="color: yellow;">C</h3>
+
+    <p>
+        Estou aprendendo aos poucos a linguagem de marcação HTML.
+    </p>
     <background color='blue' />
 </body>
 
