mudei a cor do fundo

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -7,16 +7,14 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:blueviolet">
+<body style="background-color:darkorange">
     <h1 style="color: tomato;">A</h1>
-    <p>
+    <p style="color: darkblue;">
         Estou aprendendo aos poucos a linguagem de marcação HTML.
     </p>
     <h2 style="color: darkblue;">B</h2>
     <h3 style="color: yellow;">C</h3>
 
-    
-    <background color='blue' />
 </body>
 
 </html>
