Adicionei outra descrição

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body style="background-color:darkorange">
-    <h1 style="color: tomato;">A</h1>
+    <h1 style="color: tomato;">Minhas anotações</h1>
     <p style="color: darkblue;">
         Estou aprendendo aos poucos a linguagem de marcação HTML.
+    </p>
+
+    <p>
+        Aos poucos, quero implementar funções neste arquivo, com mensagens de bom dia, calculadora, etc.
     </p>
 
 </body>
