mudei a cor do segundo parágrafo

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -13,7 +13,7 @@
         Estou aprendendo aos poucos a linguagem de marcação HTML.
     </p>
 
-    <p>
+    <p style="color: green;">
         Aos poucos, quero implementar funções neste arquivo, com mensagens de bom dia, calculadora, etc.
     </p>
 
