Coloquei a cor do fundo de verde marinho

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:darkorange">
-    <h1 style="color: tomato;">Minhas anotações</h1>
+<body style="background-color: teal">
+    <h1 style="color: darkorange;">Minhas anotações</h1>
     <p style="color: darkblue;">
         Estou aprendendo aos poucos a linguagem de marcação HTML.
     </p>
