--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -17,6 +17,9 @@
         Aos poucos, quero implementar funções neste arquivo, com mensagens de bom dia, calculadora, etc.
     </p>
 
+    <p>
+        Estou passando por outra fase da minha vida, estão vindo coisas novas e coisas boas.
+    </p>
 </body>
 
 </html>
