--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -19,6 +19,7 @@
 
     <p>
         Estou passando por outra fase da minha vida, estão vindo coisas novas e coisas boas.
+        As coisas vão melhorar, estou conhecendo uma pessoa incrível, que me apoia e me ama.
     </p>
 </body>
 
