--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -22,6 +22,7 @@
         As coisas vão melhorar, estou conhecendo uma pessoa incrível, que me apoia e me ama.
         Espero que logo eu veja essa pessoa, claro, ela tem seus defeitos e qualidades.
         A gente se apoia, se ama, se cuida e quer o bem um do outro.
+        Vou respeitar as limitações do nosso relacionamento, não estou perdidamente apaixonado.
     </p>
 </body>
 
