--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -23,6 +23,7 @@
         Espero que logo eu veja essa pessoa, claro, ela tem seus defeitos e qualidades.
         A gente se apoia, se ama, se cuida e quer o bem um do outro.
         Vou respeitar as limitações do nosso relacionamento, não estou perdidamente apaixonado.
+        Estou amando, o amor vem primeiramente dentro de nós, só depois conseguimos amar o outro.
     </p>
 </body>
 
