--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -24,6 +24,7 @@
         A gente se apoia, se ama, se cuida e quer o bem um do outro.
         Vou respeitar as limitações do nosso relacionamento, não estou perdidamente apaixonado.
         Estou amando, o amor vem primeiramente dentro de nós, só depois conseguimos amar o outro.
+        Até outro dia, meu diário. Volto logo.
     </p>
 </body>
 
