--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -18,9 +18,10 @@
     </p>
 
     <p>
-       Galo hoje meteu 4 no Vasquin kkkkkkkkkk
-       Alonso pôs o Cano no bolso
-       Nathan é monstro
+       Galo hoje meteu 4 no Vasquin kkkkkkkkkk.
+       Alonso pôs o Cano no bolso.
+       Nathan é monstro.
+       Tem que ganhar do Fortaleza.
     </p>
 </body>
 
