--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -18,10 +18,7 @@
     </p>
 
     <p>
-       Galo hoje meteu 4 no Vasquin kkkkkkkkkk.
-       Alonso pôs o Cano no bolso.
-       Nathan é monstro.
-       Tem que ganhar do Fortaleza.
+        Vou testar esse arquivo HTML no meu emulador do Android.
     </p>
 </body>
 
