Voltei a anotar minha vida.

--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -20,6 +20,9 @@
     <p>
         Vou testar esse arquivo HTML no meu emulador do Android.
     </p>
+    <p>
+        Amo minha vida, não posso reclamar de nada.
+    </p>
 </body>
 
 </html>
