--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -9,19 +9,14 @@
 
 <body style="background-color: teal">
     <h1 style="color: darkorange;">Minhas anotações</h1>
-    <p style="color: darkblue;">
-        Estou aprendendo aos poucos a linguagem de marcação HTML.
-    </p>
-
-    <p style="color: green;">
-        Aos poucos, quero implementar funções neste arquivo, com mensagens de bom dia, calculadora, etc.
-    </p>
-
     <p>
         Vou testar esse arquivo HTML no meu emulador do Android.
     </p>
     <p>
         Amo minha vida, não posso reclamar de nada.
+    </p>
+    <p>
+        Quero que tudo melhore pra minha mãe, essa mulher merece tudo de melhor.
     </p>
 </body>
 
