--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -18,6 +18,9 @@
     <p>
         Quero que tudo melhore pra minha mãe, essa mulher merece tudo de melhor.
     </p>
+    <p>
+        Torço muito pra uma pessoa que amo, espero que ela realize os sonhos dela!
+    </p>
 </body>
 
 </html>
