--- a/Exemplos HTML/index.html
+++ b/Exemplos HTML/index.html
@@ -21,7 +21,12 @@
     <p>
         Torço muito pra uma pessoa que amo, espero que ela realize os sonhos dela!
     </p>
-    <p>Tenho que pedir desculpas a Maria e ao Lorenzo, e preciso melhorar minha impaciência.</p>
+    <p>
+        Tenho que pedir desculpas a Maria e ao Lorenzo, e preciso melhorar minha impaciência.
+    </p>
+    <p>
+        Tenho que amar mais Maria, apoiar, ajudar com seu filho, amo ela de todas as formas.
+    </p>
 </body>
 
 </html>
