--- a/Curso HTML5 e CSS3/Módulo 1/Exercícios/ex003/index.html
+++ b/Curso HTML5 e CSS3/Módulo 1/Exercícios/ex003/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste com Imagens</title>
 </head>
 <body>
     <h1>Testando carga de Imagens</h1>
@@ -12,6 +12,6 @@
     <p>Podemos também carregar imagens que estão em outra pasta, contanto que ela esteja dentro da pasta atual.</p>
     <img src="fotos/logo-css.png" alt="Logo das CSS3">
     <p>Também podemos carregar imagens externas, e para isso devemos ter a sua URL completa.</p>
-    <img src="https://www.jsdotgit.com/js-small.gif" alt="Logo de Javascript">
+    <img src="https://tkssharma.com/static/1bbde74a918ac99b9e7319e041cb62b5/1e586/js.png" alt="Logo de Javascript"> <!--URL-->
 </body>
 </html>
