--- a/Curso HTML5 e CSS3/Módulo 1/Exercícios/ex004/index.html
+++ b/Curso HTML5 e CSS3/Módulo 1/Exercícios/ex004/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
     <title>Testando o ícone de Favoritos</title>
 </head>
 <body>
-    
+    <h1>Olha o ícone de Favoritos aqui em cima!</h1>
 </body>
 </html>
