Fazendo testes com sons.

--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="source/css/main.css">
     <title>Testes</title>
 </head>
+
 <body>
     <h1>Olá!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam tempora quibusdam illum corrupti vel illo consectetur, expedita veniam non id in atque natus. Voluptates vitae impedit illo nobis veritatis dolorem.</p>
+    <h2>Aqui você vai poder ouvir alguns sons de filmes.</h2>
+    <p>
+        <h3>Filmes de Ação</h3>
+        <audio src="library/sounds/acao/predador.mp3" preload="auto" controls>Predador</audio>
+        <br>
+        <audio src="library/sounds/acao/rambo.mp3" preload="auto" controls>Rambo</audio>
+        <br>
+        <audio src="library/sounds/acao/mi.mp3" preload="auto" controls>Missão Impossível</audio>
+    </p>
+    <hr>
+    <p>
+        <h3>Filmes de Drama</h3>
+        <audio src="library/sounds/drama/django.mp3" preload="auto" controls></audio>
+    </p>
 </body>
+
 </html>
