Adicionando mais filmes.

--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -13,16 +13,20 @@
     <h2>Aqui você vai poder ouvir alguns sons de filmes.</h2>
     <p>
         <h3>Filmes de Ação</h3>
-        <audio src="library/sounds/acao/predador.mp3" preload="auto" controls>Predador</audio>
+        <audio src="library/sounds/acao/predador.mp3" preload="auto" controls></audio>
         <br>
-        <audio src="library/sounds/acao/rambo.mp3" preload="auto" controls>Rambo</audio>
+        <audio src="library/sounds/acao/rambo.mp3" preload="auto" controls></audio>
         <br>
-        <audio src="library/sounds/acao/mi.mp3" preload="auto" controls>Missão Impossível</audio>
+        <audio src="library/sounds/acao/mi.mp3" preload="auto" controls></audio>
     </p>
     <hr>
     <p>
         <h3>Filmes de Drama</h3>
         <audio src="library/sounds/drama/django.mp3" preload="auto" controls></audio>
+        <br>
+        <audio src="library/sounds/drama/forrest_gump.mp3" preload="auto" controls></audio>
+        <br>
+        <audio src="library/sounds/drama/rocky.mp3" preload="auto" controls></audio>
     </p>
 </body>
 
