--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
-    <h1>Olá!</h1>
-    <h2>Aqui você vai poder ouvir alguns sons de filmes.</h2>
+    <h1>Locadora STA</h1>
+    <hr>
+    <h2>Olá!</h2>
+    <h3>Aqui você vai poder ouvir alguns sons de filmes.</h3>
     <p>
-        <h3>Filmes de Ação</h3>
+        <h4>Filmes de Ação</h4>
         <audio src="library/sounds/acao/predador.mp3" preload="auto" controls></audio>
         <br>
         <audio src="library/sounds/acao/rambo.mp3" preload="auto" controls></audio>
         <br>
         <audio src="library/sounds/acao/mi.mp3" preload="auto" controls></audio>
     </p>
-    <hr>
     <p>
-        <h3>Filmes de Drama</h3>
+        <h4>Filmes de Drama</h4>
         <audio src="library/sounds/drama/django.mp3" preload="auto" controls></audio>
         <br>
         <audio src="library/sounds/drama/forrest_gump.mp3" preload="auto" controls></audio>
