Adicionando mais áudios.

--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -29,6 +29,18 @@
         <br>
         <audio src="library/sounds/drama/rocky.mp3" preload="auto" controls></audio>
     </p>
+    <p>
+        <h4>Filmes de Romance</h4>
+        <audio src="library/sounds/romance/moicanos.mp3" preload="auto" controls></audio>
+    </p>
+    <p>
+        <h4>Filmes de Comédia</h4>
+        <audio src="library/sounds/comedia/caca_fantasmas.mp3" preload="auto" controls></audio>
+        <br>
+        <audio src="library/sounds/comedia/miss_sunshine.mp3" preload="auto" controls></audio>
+        <br>
+        <audio src="library/sounds/comedia/pf.mp3" preload="auto" controls></audio>
+    </p>
 </body>
 
 </html>
