Testando Javascript no HTML.

--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <script src="source/js/main.js"></script>
+    <script type="text/javascript" src="source/js/main.js"></script>
 
     <h1>Locadora STA</h1>
     <hr>
@@ -44,6 +44,9 @@
         <audio src="library/sounds/comedia/miss_sunshine.mp3" preload="auto" controls></audio>
         <br>
         <audio src="library/sounds/comedia/pf.mp3" preload="auto" controls></audio>
+    </p>
+    <p>
+        <input type="button" onclick="Ola()" value="Saudação">
     </p>
 </body>
 
