Cod 3 tem a melhor trilha sonora dos jogos!!!

--- a/Páginas/Teste/index.html
+++ b/Páginas/Teste/index.html
@@ -44,6 +44,10 @@
         <br>
         <audio src="library/sounds/comedia/pf.mp3" preload="auto" controls></audio>
     </p>
+    <p>
+        <h4>Músicas de Jogos</h4>
+        <audio src="library/sounds/games/cod3.mp3" preload="auto" controls></audio>
+    </p>
 </body>
 
 </html>
